pamc/src/tests/sample_code/should_succeed/should_succeed_without_warnings/dash_does_not_affect_type.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = fun _(-a: Nat, b: Nat): Nat { a };

type Unit { .C: Unit }

let ok = fun _(_: Unit):
    forall(x: Nat, y: Nat) { Nat }
{
    foo
};
